# ift-demo

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  Makefile  common.css  config_sc.yaml  demo.js  fonts.css  ift_client.js  index.html  roboto_config.txtpb  sample-texts.json  sample-texts.short.json  step1-build-base-fonts.sh  step2-build-iftb-fonts.sh  step3-build-demo-fonts.sh
NotoSansSC-Regular_1_iftb/: rangefile
NotoSansSC-Regular_1_iftb/0/: chunk001.br  chunk002.br  chunk003.br  chunk004.br  chunk005.br  chunk006.br  chunk007.br  chunk008.br  chunk009.br  chunk00a.br  chunk00b.br  chunk00c.br  chunk00d.br  chunk00e.br  chunk00f.br  chunk010.br  chunk011.br  chunk012.br  chunk013.br  chunk014.br  chunk015.br  chunk016.br  chunk017.br  chunk018.br  chunk019.br  chunk01a.br  chunk01b.br  chunk01c.br  chunk01d.br  chunk01e.br  chunk01f.br  chunk020.br  chunk021.br  chunk022.br  chunk023.br  chunk024.br  chunk025.br  chunk026.br  chunk027.br  chunk028.br  (+215 more)
NotoSansSC-Regular_1_iftb/1/: chunk100.br  chunk101.br  chunk102.br  chunk103.br  chunk104.br  chunk105.br  chunk106.br  chunk107.br  chunk108.br  chunk109.br  chunk10a.br  chunk10b.br  chunk10c.br  chunk10d.br  chunk10e.br  chunk10f.br  chunk110.br  chunk111.br  chunk112.br
NotoSansSC-Regular_2_iftb/: rangefile
NotoSansSC-Regular_2_iftb/0/: chunk001.br  chunk002.br  chunk003.br  chunk004.br  chunk005.br  chunk006.br  chunk007.br  chunk008.br  chunk009.br  chunk00a.br  chunk00b.br  chunk00c.br  chunk00d.br  chunk00e.br  chunk00f.br  chunk010.br  chunk011.br  chunk012.br  chunk013.br  chunk014.br  chunk015.br  chunk016.br  chunk017.br  chunk018.br  chunk019.br  chunk01a.br  chunk01b.br  chunk01c.br  chunk01d.br  chunk01e.br  chunk01f.br  chunk020.br  chunk021.br  chunk022.br  chunk023.br  chunk024.br  chunk025.br  chunk026.br  chunk027.br  chunk028.br  (+215 more)
NotoSansSC-Regular_2_iftb/1/: chunk100.br  chunk101.br  chunk102.br  chunk103.br  chunk104.br  chunk105.br  chunk106.br  chunk107.br  chunk108.br  chunk109.br  chunk10a.br  chunk10b.br  chunk10c.br  chunk10d.br  chunk10e.br  chunk10f.br  chunk110.br  chunk111.br  chunk112.br  chunk113.br  chunk114.br  chunk115.br  chunk116.br  chunk117.br  chunk118.br  chunk119.br  chunk11a.br  chunk11b.br  chunk11c.br  chunk11d.br  chunk11e.br  chunk11f.br  chunk120.br  chunk121.br  chunk122.br  chunk123.br  chunk124.br  chunk125.br  chunk126.br  chunk127.br  (+216 more)
NotoSansSC-Regular_2_iftb/2/: chunk200.br  chunk201.br  chunk202.br  chunk203.br  chunk204.br  chunk205.br  chunk206.br  chunk207.br  chunk208.br  chunk209.br  chunk20a.br  chunk20b.br  chunk20c.br  chunk20d.br  chunk20e.br  chunk20f.br  chunk210.br  chunk211.br  chunk212.br  chunk213.br  chunk214.br  chunk215.br  chunk216.br  chunk217.br  chunk218.br  chunk219.br  chunk21a.br  chunk21b.br  chunk21c.br  chunk21d.br  chunk21e.br  chunk21f.br  chunk220.br  chunk221.br  chunk222.br  chunk223.br  chunk224.br  chunk225.br  chunk226.br  chunk227.br  (+216 more)
NotoSansSC-Regular_2_iftb/3/: chunk300.br  chunk301.br  (+88 more)
NotoSerifSC-ExtraLight_1_iftb/: rangefile
cc-client/: BUILD  brotli.cc
config/: noto_sans_jp_segmentation_plan.txtpb  noto_sans_low_freq_segmentation_plan.txtpb  noto_sans_segmentation_config.txtpb  noto_sans_segmentation_plan.txtpb  noto_serif_jp_segmentation_config.txtpb  noto_serif_jp_segmentation_plan.txtpb  noto_serif_low_freq_segmentation_config.txtpb  noto_serif_low_freq_segmentation_plan.txtpb  noto_serif_segmentation_config.txtpb  noto_serif_segmentation_plan.txtpb  roboto_segmentation_config.txtpb  roboto_segmentation_plan.txtpb
docs/: demo.js  fonts.css  index.html  sample-texts.json
html/: demo.js  fonts.css  index.html  sample-texts.json  sample-texts.short.json
original_fonts/: roboto_additional_config.txtpb
rust-client/: Cargo.toml
rust-client/src/: lib.rs
subsets/: greek.txt  japanese-ordered.txt  japanese-supplemental.txt  latin.txt  simplified-chinese-ordered.txt  simplified-chinese_split1.txt  simplified-chinese_split2.txt  vietnamese.txt
(+40122 files in other folders)
