[package]
name = "rust-client"
version = "0.1.0"
authors = ["Garret Rieger <grieger@google.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.103"
wasm-bindgen-futures = "0.4.53"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ['Request', 'RequestInit', 'RequestMode', 'Response', 'Window'] }
read-fonts = { git = "https://github.com/googlefonts/fontations.git", rev = "8b6497da9ae0e94e27fd488c01d7955f8f1b2b9f" }
incremental-font-transfer = { git = "https://github.com/googlefonts/fontations.git", rev = "8b6497da9ae0e94e27fd488c01d7955f8f1b2b9f", default-features = false, features = [ "rust-brotli" ] }
shared-brotli-patch-decoder = { git = "https://github.com/googlefonts/fontations.git", rev = "8b6497da9ae0e94e27fd488c01d7955f8f1b2b9f", default-features = false, features = [ "rust-brotli" ] }
tokio = { version = "1.43.0", features = [ "sync" ] }
futures = { version = "0.3.31" }
digest = "0.10.7"
sha2 = "0.10"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
